--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -981,9 +981,6 @@
   <data name="INFO_OIL_SEAL_2" xml:space="preserve">
     <value>تحقق من نظام ختم النفط رمح وإعادة تشغيل المحرك</value>
   </data>
-  <data name="INFO_OIL_SEAL_3" xml:space="preserve">
-    <value>إعادة ملء زيت الختم أو المحرك سوف تتوقف في غضون ساعة واحدة</value>
-  </data>
   <data name="INFO_OIL_SEAL_4" xml:space="preserve">
     <value>تحقق من نظام ختم النفط رمح وإعادة تشغيل المحرك</value>
   </data>
@@ -1412,5 +1409,263 @@
   </data>
   <data name="CRITICAL FAULT IN THE ELECTRICAL CABINET" xml:space="preserve">
     <value>عطل فادح في الخزانة الكهربائي</value>
+  </data>
+  <data name="SWIPE CARD TO LOG IN" xml:space="preserve">
+    <value>مرر البطاقة لتسجيل الدخول</value>
+  </data>
+  <data name="SEARCH COMPONENTS" xml:space="preserve">
+    <value>مكونات البحث</value>
+  </data>
+  <data name="OPEN VIRTUAL KEYBOARD" xml:space="preserve">
+    <value>افتح لوحة المفاتيح الافتراضية</value>
+  </data>
+  <data name="NO POSITION" xml:space="preserve">
+    <value>لا يوجد موقف</value>
+  </data>
+  <data name="LEVELS NOT OK FOR PROCESS" xml:space="preserve">
+    <value>المستويات ليست جيدة للعملية</value>
+  </data>
+  <data name="GREASE MINIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>الحد الأدنى لمستوى الشحوم ليس جيدًا</value>
+  </data>
+  <data name="LOCAL ENABLE SELECTOR NOT OK" xml:space="preserve">
+    <value>محدد تمكين محلي ليس جيدًا</value>
+  </data>
+  <data name="INVERTER PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>العاكس Profinet الاتصالات ليست جيدة</value>
+  </data>
+  <data name="COMPONENT DISABLED" xml:space="preserve">
+    <value>المكون معطل</value>
+  </data>
+  <data name="USER" xml:space="preserve">
+    <value>المستعمل</value>
+  </data>
+  <data name="DEBALER NOT IN AUTO MODE" xml:space="preserve">
+    <value>Debaler ليس في الوضع التلقائي</value>
+  </data>
+  <data name="OVERLOAD" xml:space="preserve">
+    <value>الزائد</value>
+  </data>
+  <data name="CHARGING" xml:space="preserve">
+    <value>الشحن</value>
+  </data>
+  <data name="SPEED_ACTUAL" xml:space="preserve">
+    <value>السرعة_ الفعلية</value>
+  </data>
+  <data name="FINAL SILO" xml:space="preserve">
+    <value>الصومعة النهائية</value>
+  </data>
+  <data name="WASHING 2" xml:space="preserve">
+    <value>غسل 2</value>
+  </data>
+  <data name="CONCENTRATION" xml:space="preserve">
+    <value>تركيز</value>
+  </data>
+  <data name="HYSTERESIS" xml:space="preserve">
+    <value>التباطؤ</value>
+  </data>
+  <data name="SETPOINT" xml:space="preserve">
+    <value>نقطة الضبط</value>
+  </data>
+  <data name="START TANK REFILL (UP TO SETPOINT)" xml:space="preserve">
+    <value>بدء إعادة تعبئة الخزان (حتى نقطة الإعداد)</value>
+  </data>
+  <data name="MINIMUM LEVEL FOR DISCHARGING" xml:space="preserve">
+    <value>الحد الأدنى من مستوى التفريغ</value>
+  </data>
+  <data name="MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>درجة الحرارة القصوى</value>
+  </data>
+  <data name="LOW TEMPERATURE WARNING" xml:space="preserve">
+    <value>تحذير من درجات حرارة منخفضة</value>
+  </data>
+  <data name="MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>أدنى درجة حرارة</value>
+  </data>
+  <data name="PARAMETER MANAGEMENT" xml:space="preserve">
+    <value>إدارة المعلمات</value>
+  </data>
+  <data name="SKIP PREPARATION" xml:space="preserve">
+    <value>تخطي التحضير</value>
+  </data>
+  <data name="SELECTED TRENDS" xml:space="preserve">
+    <value>اتجاهات مختارة</value>
+  </data>
+  <data name="DELETE SELECTED PRESET?" xml:space="preserve">
+    <value>هل تريد حذف الإعداد المسبق المحدد؟</value>
+  </data>
+  <data name="THIS PRESET WILL BE DELETED FROM ALL MACHINES." xml:space="preserve">
+    <value>سيتم حذف هذا الإعداد المسبق من جميع الأجهزة.</value>
+  </data>
+  <data name="ADVANCED VIEW" xml:space="preserve">
+    <value>عرض متقدم</value>
+  </data>
+  <data name="ADD NEW" xml:space="preserve">
+    <value>اضف جديد</value>
+  </data>
+  <data name="PRESETS" xml:space="preserve">
+    <value>الإعدادات المسبقة</value>
+  </data>
+  <data name="IMAGE NAME" xml:space="preserve">
+    <value>اسم الصورة</value>
+  </data>
+  <data name="CREATION DATE" xml:space="preserve">
+    <value>تاريخ الإنشاء</value>
+  </data>
+  <data name="TYPE" xml:space="preserve">
+    <value>يكتب</value>
+  </data>
+  <data name="DESCRIPTION" xml:space="preserve">
+    <value>وصف</value>
+  </data>
+  <data name="CURRENT VALUE" xml:space="preserve">
+    <value>القيمة الحالية</value>
+  </data>
+  <data name="LOGGED VALUE" xml:space="preserve">
+    <value>القيمة المسجلة</value>
+  </data>
+  <data name="ONLY SHOW DIFFERENCES" xml:space="preserve">
+    <value>إظهار الاختلافات فقط</value>
+  </data>
+  <data name="SEND IMAGE TO PLC" xml:space="preserve">
+    <value>إرسال الصورة إلى Plc</value>
+  </data>
+  <data name="OPEN IMAGE" xml:space="preserve">
+    <value>صورة مفتوحة</value>
+  </data>
+  <data name="DELETE IMAGE" xml:space="preserve">
+    <value>حذف صورة</value>
+  </data>
+  <data name="CREATE NEW IMAGE" xml:space="preserve">
+    <value>إنشاء صورة جديدة</value>
+  </data>
+  <data name="NO DIFFERENCES FOUND" xml:space="preserve">
+    <value>لا توجد اختلافات</value>
+  </data>
+  <data name="CRATED BY" xml:space="preserve">
+    <value>محجوز من قبل</value>
+  </data>
+  <data name="SELECT PROCESS IMAGE" xml:space="preserve">
+    <value>حدد صورة العملية</value>
+  </data>
+  <data name="PROCESS IMAGE" xml:space="preserve">
+    <value>صورة العملية</value>
+  </data>
+  <data name="PARAMETER LIST" xml:space="preserve">
+    <value>قائمة المعلمات</value>
+  </data>
+  <data name="WASHING SILO" xml:space="preserve">
+    <value>صوامع الغسيل</value>
+  </data>
+  <data name="INVERTER NOT READY" xml:space="preserve">
+    <value>العاكس غير جاهز</value>
+  </data>
+  <data name="INVERTER WARNING PRESENT" xml:space="preserve">
+    <value>يوجد تحذير العاكس</value>
+  </data>
+  <data name="WASHING 1" xml:space="preserve">
+    <value>غسل 1</value>
+  </data>
+  <data name="LOCAL SAFETY" xml:space="preserve">
+    <value>الأمان المحلي</value>
+  </data>
+  <data name="(1=CLOSED)" xml:space="preserve">
+    <value>(1 = مغلق)</value>
+  </data>
+  <data name="CHANGE VALUE" xml:space="preserve">
+    <value>تغيير القيمة</value>
+  </data>
+  <data name="PLC PAGE" xml:space="preserve">
+    <value>صفحة Plc</value>
+  </data>
+  <data name="EMERGENCY" xml:space="preserve">
+    <value>طارئ</value>
+  </data>
+  <data name="ESTOP PRESSED (ON PLANT)" xml:space="preserve">
+    <value>ضغط Estop (على النبات)</value>
+  </data>
+  <data name="ESTOP PRESSED (CABINET DOOR)" xml:space="preserve">
+    <value>ضغط Estop (باب الخزانة)</value>
+  </data>
+  <data name="CABINET OFF" xml:space="preserve">
+    <value>مجلس الوزراء معطلة</value>
+  </data>
+  <data name="ETHERNET SWITCH NOT OK" xml:space="preserve">
+    <value>تبديل إيثرنت ليس على ما يرام</value>
+  </data>
+  <data name="UPSTREAM SAFETY NOT OK" xml:space="preserve">
+    <value>سلامة المنبع ليست جيدة</value>
+  </data>
+  <data name="MANUAL START REQUIRED" xml:space="preserve">
+    <value>البدء اليدوي مطلوب</value>
+  </data>
+  <data name="FAULT" xml:space="preserve">
+    <value>خطأ</value>
+  </data>
+  <data name="PLC ADDRESS" xml:space="preserve">
+    <value>عنوان Plc</value>
+  </data>
+  <data name="TIME IN" xml:space="preserve">
+    <value>حان الوقت</value>
+  </data>
+  <data name="TIME ACKNOWLEDGE" xml:space="preserve">
+    <value>الاعتراف بالوقت</value>
+  </data>
+  <data name="TIME OUT" xml:space="preserve">
+    <value>نفذ الوقت</value>
+  </data>
+  <data name="TO PAGE" xml:space="preserve">
+    <value>إلى الصفحة</value>
+  </data>
+  <data name="MINOR FAULT PRESENT" xml:space="preserve">
+    <value>خطأ طفيف موجود</value>
+  </data>
+  <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT (POSSIBLE CAVITATION)" xml:space="preserve">
+    <value>تيار المحرك أقل من الحد الأدنى للمدى (التجويف المحتمل)</value>
+  </data>
+  <data name="SPEED REQUEST" xml:space="preserve">
+    <value>طلب السرعة</value>
+  </data>
+  <data name="MAXIMUM CURRENT" xml:space="preserve">
+    <value>الحد الأقصى الحالي</value>
+  </data>
+  <data name="MINIMUM CURRENT" xml:space="preserve">
+    <value>الحد الأدنى الحالي</value>
+  </data>
+  <data name="NOMINAL MOTOR CURRENT" xml:space="preserve">
+    <value>تيار المحرك الاسمي</value>
+  </data>
+  <data name="HIGH RESTART SPEED" xml:space="preserve">
+    <value>سرعة إعادة تشغيل عالية</value>
+  </data>
+  <data name="DURATION" xml:space="preserve">
+    <value>مدة</value>
+  </data>
+  <data name="PRODUCTION SPEED" xml:space="preserve">
+    <value>سرعة الإنتاج</value>
+  </data>
+  <data name="MAINTENANCE SPEED" xml:space="preserve">
+    <value>سرعة الصيانة</value>
+  </data>
+  <data name="MINIMUM" xml:space="preserve">
+    <value>الحد الأدنى</value>
+  </data>
+  <data name="MAXIMUM" xml:space="preserve">
+    <value>أقصى</value>
+  </data>
+  <data name="NEW VALUE" xml:space="preserve">
+    <value>قيمة جديدة</value>
+  </data>
+  <data name="SEND THE FOLLOWING IMAGE TO PLC?" xml:space="preserve">
+    <value>إرسال الصورة التالية إلى Plc؟</value>
+  </data>
+  <data name="DELETE THE FOLLOWING IMAGE?" xml:space="preserve">
+    <value>حذف الصورة التالية؟</value>
+  </data>
+  <data name="SAVE NEW PROCESS IMAGE" xml:space="preserve">
+    <value>حفظ صورة العملية الجديدة</value>
+  </data>
+  <data name="NAME" xml:space="preserve">
+    <value>اسم</value>
   </data>
 </root>
