--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -960,9 +960,6 @@
   <data name="INFO_OIL_SEAL_2" xml:space="preserve">
     <value>Überprüfen Sie das Wellenöldichtungssystem und starten Sie den Motor neu</value>
   </data>
-  <data name="INFO_OIL_SEAL_3" xml:space="preserve">
-    <value>Die Nachfüllung des Dichtungsöls oder des Motors wird innerhalb einer Stunde gestoppt</value>
-  </data>
   <data name="INFO_OIL_SEAL_4" xml:space="preserve">
     <value>Überprüfen Sie das Wellenöldichtungssystem und starten Sie den Motor neu</value>
   </data>
@@ -1415,5 +1412,263 @@
   </data>
   <data name="CRITICAL FAULT IN THE ELECTRICAL CABINET" xml:space="preserve">
     <value>Kritischer Fehler im Schaltschrank</value>
+  </data>
+  <data name="SWIPE CARD TO LOG IN" xml:space="preserve">
+    <value>Wischen Sie die Karte, um sich anzumelden</value>
+  </data>
+  <data name="SEARCH COMPONENTS" xml:space="preserve">
+    <value>Suchkomponenten</value>
+  </data>
+  <data name="OPEN VIRTUAL KEYBOARD" xml:space="preserve">
+    <value>Öffnen Sie die virtuelle Tastatur</value>
+  </data>
+  <data name="NO POSITION" xml:space="preserve">
+    <value>Keine Stellung</value>
+  </data>
+  <data name="LEVELS NOT OK FOR PROCESS" xml:space="preserve">
+    <value>Ebenen für den Prozess nicht in Ordnung</value>
+  </data>
+  <data name="GREASE MINIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Fett-Mindestfüllstand nicht in Ordnung</value>
+  </data>
+  <data name="LOCAL ENABLE SELECTOR NOT OK" xml:space="preserve">
+    <value>Local Enable Selector nicht in Ordnung</value>
+  </data>
+  <data name="INVERTER PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>Profinet-Kommunikation des Wechselrichters nicht in Ordnung</value>
+  </data>
+  <data name="COMPONENT DISABLED" xml:space="preserve">
+    <value>Komponente deaktiviert</value>
+  </data>
+  <data name="USER" xml:space="preserve">
+    <value>Benutzer</value>
+  </data>
+  <data name="DEBALER NOT IN AUTO MODE" xml:space="preserve">
+    <value>Entballer nicht im Auto-Modus</value>
+  </data>
+  <data name="OVERLOAD" xml:space="preserve">
+    <value>Überlast</value>
+  </data>
+  <data name="CHARGING" xml:space="preserve">
+    <value>Laden</value>
+  </data>
+  <data name="SPEED_ACTUAL" xml:space="preserve">
+    <value>Geschwindigkeit_Aktuell</value>
+  </data>
+  <data name="FINAL SILO" xml:space="preserve">
+    <value>Letztes Silo</value>
+  </data>
+  <data name="WASHING 2" xml:space="preserve">
+    <value>Waschen 2</value>
+  </data>
+  <data name="CONCENTRATION" xml:space="preserve">
+    <value>Konzentration</value>
+  </data>
+  <data name="HYSTERESIS" xml:space="preserve">
+    <value>Hysterese</value>
+  </data>
+  <data name="SETPOINT" xml:space="preserve">
+    <value>Sollwert</value>
+  </data>
+  <data name="START TANK REFILL (UP TO SETPOINT)" xml:space="preserve">
+    <value>Tanknachfüllung starten (bis zum Sollwert)</value>
+  </data>
+  <data name="MINIMUM LEVEL FOR DISCHARGING" xml:space="preserve">
+    <value>Mindestfüllstand zum Entladen</value>
+  </data>
+  <data name="MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>Maximale Temperatur</value>
+  </data>
+  <data name="LOW TEMPERATURE WARNING" xml:space="preserve">
+    <value>Warnung vor niedriger Temperatur</value>
+  </data>
+  <data name="MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>Mindesttemperatur</value>
+  </data>
+  <data name="PARAMETER MANAGEMENT" xml:space="preserve">
+    <value>Parameterverwaltung</value>
+  </data>
+  <data name="SKIP PREPARATION" xml:space="preserve">
+    <value>Vorbereitung überspringen</value>
+  </data>
+  <data name="SELECTED TRENDS" xml:space="preserve">
+    <value>Ausgewählte Trends</value>
+  </data>
+  <data name="DELETE SELECTED PRESET?" xml:space="preserve">
+    <value>Ausgewählte Voreinstellung löschen?</value>
+  </data>
+  <data name="THIS PRESET WILL BE DELETED FROM ALL MACHINES." xml:space="preserve">
+    <value>Diese Voreinstellung wird von allen Maschinen gelöscht.</value>
+  </data>
+  <data name="ADVANCED VIEW" xml:space="preserve">
+    <value>Erweiterte Ansicht</value>
+  </data>
+  <data name="ADD NEW" xml:space="preserve">
+    <value>Neue hinzufügen</value>
+  </data>
+  <data name="PRESETS" xml:space="preserve">
+    <value>Voreinstellungen</value>
+  </data>
+  <data name="IMAGE NAME" xml:space="preserve">
+    <value>Bildname</value>
+  </data>
+  <data name="CREATION DATE" xml:space="preserve">
+    <value>Erstellungsdatum</value>
+  </data>
+  <data name="TYPE" xml:space="preserve">
+    <value>Typ</value>
+  </data>
+  <data name="DESCRIPTION" xml:space="preserve">
+    <value>Beschreibung</value>
+  </data>
+  <data name="CURRENT VALUE" xml:space="preserve">
+    <value>Aktueller Wert</value>
+  </data>
+  <data name="LOGGED VALUE" xml:space="preserve">
+    <value>Protokollierter Wert</value>
+  </data>
+  <data name="ONLY SHOW DIFFERENCES" xml:space="preserve">
+    <value>Nur Unterschiede anzeigen</value>
+  </data>
+  <data name="SEND IMAGE TO PLC" xml:space="preserve">
+    <value>Bild an SPS senden</value>
+  </data>
+  <data name="OPEN IMAGE" xml:space="preserve">
+    <value>Bild öffnen</value>
+  </data>
+  <data name="DELETE IMAGE" xml:space="preserve">
+    <value>Lösche Bild</value>
+  </data>
+  <data name="CREATE NEW IMAGE" xml:space="preserve">
+    <value>Neues Bild erstellen</value>
+  </data>
+  <data name="NO DIFFERENCES FOUND" xml:space="preserve">
+    <value>Keine Unterschiede gefunden</value>
+  </data>
+  <data name="CRATED BY" xml:space="preserve">
+    <value>Erstellt von</value>
+  </data>
+  <data name="SELECT PROCESS IMAGE" xml:space="preserve">
+    <value>Wählen Sie Prozessabbild</value>
+  </data>
+  <data name="PROCESS IMAGE" xml:space="preserve">
+    <value>Bild verarbeiten</value>
+  </data>
+  <data name="PARAMETER LIST" xml:space="preserve">
+    <value>Parameterliste</value>
+  </data>
+  <data name="WASHING SILO" xml:space="preserve">
+    <value>Waschsilo</value>
+  </data>
+  <data name="INVERTER NOT READY" xml:space="preserve">
+    <value>Wechselrichter nicht bereit</value>
+  </data>
+  <data name="INVERTER WARNING PRESENT" xml:space="preserve">
+    <value>Wechselrichterwarnung vorhanden</value>
+  </data>
+  <data name="WASHING 1" xml:space="preserve">
+    <value>Waschen 1</value>
+  </data>
+  <data name="LOCAL SAFETY" xml:space="preserve">
+    <value>Lokale Sicherheit</value>
+  </data>
+  <data name="(1=CLOSED)" xml:space="preserve">
+    <value>(1=Geschlossen)</value>
+  </data>
+  <data name="CHANGE VALUE" xml:space="preserve">
+    <value>Wert ändern</value>
+  </data>
+  <data name="PLC PAGE" xml:space="preserve">
+    <value>SPS-Seite</value>
+  </data>
+  <data name="EMERGENCY" xml:space="preserve">
+    <value>Notfall</value>
+  </data>
+  <data name="ESTOP PRESSED (ON PLANT)" xml:space="preserve">
+    <value>Estop gedrückt (auf der Anlage)</value>
+  </data>
+  <data name="ESTOP PRESSED (CABINET DOOR)" xml:space="preserve">
+    <value>Anschlag gedrückt (Schranktür)</value>
+  </data>
+  <data name="CABINET OFF" xml:space="preserve">
+    <value>Kabinett aus</value>
+  </data>
+  <data name="ETHERNET SWITCH NOT OK" xml:space="preserve">
+    <value>Ethernet-Switch nicht in Ordnung</value>
+  </data>
+  <data name="UPSTREAM SAFETY NOT OK" xml:space="preserve">
+    <value>Upstream-Sicherheit nicht in Ordnung</value>
+  </data>
+  <data name="MANUAL START REQUIRED" xml:space="preserve">
+    <value>Manueller Start erforderlich</value>
+  </data>
+  <data name="FAULT" xml:space="preserve">
+    <value>Fehler</value>
+  </data>
+  <data name="PLC ADDRESS" xml:space="preserve">
+    <value>SPS-Adresse</value>
+  </data>
+  <data name="TIME IN" xml:space="preserve">
+    <value>Zeit ein</value>
+  </data>
+  <data name="TIME ACKNOWLEDGE" xml:space="preserve">
+    <value>Zeitbestätigung</value>
+  </data>
+  <data name="TIME OUT" xml:space="preserve">
+    <value>Auszeit</value>
+  </data>
+  <data name="TO PAGE" xml:space="preserve">
+    <value>Zu Seite</value>
+  </data>
+  <data name="MINOR FAULT PRESENT" xml:space="preserve">
+    <value>Geringfügiger Fehler vorhanden</value>
+  </data>
+  <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT (POSSIBLE CAVITATION)" xml:space="preserve">
+    <value>Motorstrom unterhalb der minimalen Bereichsgrenze (mögliche Kavitation)</value>
+  </data>
+  <data name="SPEED REQUEST" xml:space="preserve">
+    <value>Geschwindigkeitsanfrage</value>
+  </data>
+  <data name="MAXIMUM CURRENT" xml:space="preserve">
+    <value>Maximaler Strom</value>
+  </data>
+  <data name="MINIMUM CURRENT" xml:space="preserve">
+    <value>Mindeststrom</value>
+  </data>
+  <data name="NOMINAL MOTOR CURRENT" xml:space="preserve">
+    <value>Motornennstrom</value>
+  </data>
+  <data name="HIGH RESTART SPEED" xml:space="preserve">
+    <value>Hohe Neustartgeschwindigkeit</value>
+  </data>
+  <data name="DURATION" xml:space="preserve">
+    <value>Dauer</value>
+  </data>
+  <data name="PRODUCTION SPEED" xml:space="preserve">
+    <value>Produktionsgeschwindigkeit</value>
+  </data>
+  <data name="MAINTENANCE SPEED" xml:space="preserve">
+    <value>Wartungsgeschwindigkeit</value>
+  </data>
+  <data name="MINIMUM" xml:space="preserve">
+    <value>Minimum</value>
+  </data>
+  <data name="MAXIMUM" xml:space="preserve">
+    <value>Maximal</value>
+  </data>
+  <data name="NEW VALUE" xml:space="preserve">
+    <value>Neuer Wert</value>
+  </data>
+  <data name="SEND THE FOLLOWING IMAGE TO PLC?" xml:space="preserve">
+    <value>Senden Sie das folgende Bild an Plc?</value>
+  </data>
+  <data name="DELETE THE FOLLOWING IMAGE?" xml:space="preserve">
+    <value>Das folgende Bild löschen?</value>
+  </data>
+  <data name="SAVE NEW PROCESS IMAGE" xml:space="preserve">
+    <value>Neues Prozessabbild speichern</value>
+  </data>
+  <data name="NAME" xml:space="preserve">
+    <value>Name</value>
   </data>
 </root>
