--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -996,4 +996,262 @@
   <data name="FIELD_ADJUST" xml:space="preserve">
     <value>Regolazione in Campo</value>
   </data>
+  <data name="SWIPE CARD TO LOG IN" xml:space="preserve">
+    <value>Scorri La Scheda Per Accedere</value>
+  </data>
+  <data name="SEARCH COMPONENTS" xml:space="preserve">
+    <value>Ricerca Componenti</value>
+  </data>
+  <data name="OPEN VIRTUAL KEYBOARD" xml:space="preserve">
+    <value>Apri Tastiera Virtuale</value>
+  </data>
+  <data name="NO POSITION" xml:space="preserve">
+    <value>Nessuna Posizione</value>
+  </data>
+  <data name="LEVELS NOT OK FOR PROCESS" xml:space="preserve">
+    <value>Livelli Non Ok Per Processo</value>
+  </data>
+  <data name="GREASE MINIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Livello Minimo Grasso Non Ok</value>
+  </data>
+  <data name="LOCAL ENABLE SELECTOR NOT OK" xml:space="preserve">
+    <value>Selettore Di Abilitazione Locale Non Ok</value>
+  </data>
+  <data name="INVERTER PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>Comunicazione Profinet Inverter Non Ok</value>
+  </data>
+  <data name="COMPONENT DISABLED" xml:space="preserve">
+    <value>Componente Disabilitato</value>
+  </data>
+  <data name="USER" xml:space="preserve">
+    <value>Utente</value>
+  </data>
+  <data name="DEBALER NOT IN AUTO MODE" xml:space="preserve">
+    <value>Disimballatrice Non In Modalità Automatica</value>
+  </data>
+  <data name="OVERLOAD" xml:space="preserve">
+    <value>Sovraccarico</value>
+  </data>
+  <data name="CHARGING" xml:space="preserve">
+    <value>Ricarica</value>
+  </data>
+  <data name="SPEED_ACTUAL" xml:space="preserve">
+    <value>Velocità_Effettiva</value>
+  </data>
+  <data name="FINAL SILO" xml:space="preserve">
+    <value>Silo Finale</value>
+  </data>
+  <data name="WASHING 2" xml:space="preserve">
+    <value>Lavaggio 2</value>
+  </data>
+  <data name="CONCENTRATION" xml:space="preserve">
+    <value>Concentrazione</value>
+  </data>
+  <data name="HYSTERESIS" xml:space="preserve">
+    <value>Isteresi</value>
+  </data>
+  <data name="SETPOINT" xml:space="preserve">
+    <value>Punto Di Riferimento</value>
+  </data>
+  <data name="START TANK REFILL (UP TO SETPOINT)" xml:space="preserve">
+    <value>Avvia Riempimento Serbatoio (Fino Al Setpoint)</value>
+  </data>
+  <data name="MINIMUM LEVEL FOR DISCHARGING" xml:space="preserve">
+    <value>Livello Minimo Per Lo Scarico</value>
+  </data>
+  <data name="MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>Temperatura Massima</value>
+  </data>
+  <data name="LOW TEMPERATURE WARNING" xml:space="preserve">
+    <value>Avviso Di Bassa Temperatura</value>
+  </data>
+  <data name="MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>Temperatura Minima</value>
+  </data>
+  <data name="PARAMETER MANAGEMENT" xml:space="preserve">
+    <value>Gestione Dei Parametri</value>
+  </data>
+  <data name="SKIP PREPARATION" xml:space="preserve">
+    <value>Salta La Preparazione</value>
+  </data>
+  <data name="SELECTED TRENDS" xml:space="preserve">
+    <value>Tendenze Selezionate</value>
+  </data>
+  <data name="DELETE SELECTED PRESET?" xml:space="preserve">
+    <value>Eliminare La Preimpostazione Selezionata?</value>
+  </data>
+  <data name="THIS PRESET WILL BE DELETED FROM ALL MACHINES." xml:space="preserve">
+    <value>Questa Preimpostazione Verrà Eliminata Da Tutte Le Macchine.</value>
+  </data>
+  <data name="ADVANCED VIEW" xml:space="preserve">
+    <value>Visualizzazione Avanzata</value>
+  </data>
+  <data name="ADD NEW" xml:space="preserve">
+    <value>Aggiungere Nuova</value>
+  </data>
+  <data name="PRESETS" xml:space="preserve">
+    <value>Preimpostazioni</value>
+  </data>
+  <data name="IMAGE NAME" xml:space="preserve">
+    <value>Nome Immagine</value>
+  </data>
+  <data name="CREATION DATE" xml:space="preserve">
+    <value>Data Di Creazione</value>
+  </data>
+  <data name="TYPE" xml:space="preserve">
+    <value>Tipo</value>
+  </data>
+  <data name="DESCRIPTION" xml:space="preserve">
+    <value>Descrizione</value>
+  </data>
+  <data name="CURRENT VALUE" xml:space="preserve">
+    <value>Valore Corrente</value>
+  </data>
+  <data name="LOGGED VALUE" xml:space="preserve">
+    <value>Valore Registrato</value>
+  </data>
+  <data name="ONLY SHOW DIFFERENCES" xml:space="preserve">
+    <value>Mostra Solo Differenze</value>
+  </data>
+  <data name="SEND IMAGE TO PLC" xml:space="preserve">
+    <value>Invia Immagine A Plc</value>
+  </data>
+  <data name="OPEN IMAGE" xml:space="preserve">
+    <value>Apri Immagine</value>
+  </data>
+  <data name="DELETE IMAGE" xml:space="preserve">
+    <value>Elimina Immagine</value>
+  </data>
+  <data name="CREATE NEW IMAGE" xml:space="preserve">
+    <value>Crea Nuova Immagine</value>
+  </data>
+  <data name="NO DIFFERENCES FOUND" xml:space="preserve">
+    <value>Nessuna Differenza Trovata</value>
+  </data>
+  <data name="CRATED BY" xml:space="preserve">
+    <value>Creato Da</value>
+  </data>
+  <data name="SELECT PROCESS IMAGE" xml:space="preserve">
+    <value>Seleziona Immagine Di Processo</value>
+  </data>
+  <data name="PROCESS IMAGE" xml:space="preserve">
+    <value>Immagine Di Processo</value>
+  </data>
+  <data name="PARAMETER LIST" xml:space="preserve">
+    <value>Elenco Parametri</value>
+  </data>
+  <data name="WASHING SILO" xml:space="preserve">
+    <value>Silo di lavaggio</value>
+  </data>
+  <data name="INVERTER NOT READY" xml:space="preserve">
+    <value>Inverter non pronto</value>
+  </data>
+  <data name="INVERTER WARNING PRESENT" xml:space="preserve">
+    <value>Avviso inverter presente</value>
+  </data>
+  <data name="WASHING 1" xml:space="preserve">
+    <value>Lavaggio 1</value>
+  </data>
+  <data name="LOCAL SAFETY" xml:space="preserve">
+    <value>Sicurezza locale</value>
+  </data>
+  <data name="(1=CLOSED)" xml:space="preserve">
+    <value>(1=Chiuso)</value>
+  </data>
+  <data name="CHANGE VALUE" xml:space="preserve">
+    <value>Cambia valore</value>
+  </data>
+  <data name="PLC PAGE" xml:space="preserve">
+    <value>Pagina PLC</value>
+  </data>
+  <data name="EMERGENCY" xml:space="preserve">
+    <value>Emergenza</value>
+  </data>
+  <data name="ESTOP PRESSED (ON PLANT)" xml:space="preserve">
+    <value>Estop premuto (su impianto)</value>
+  </data>
+  <data name="ESTOP PRESSED (CABINET DOOR)" xml:space="preserve">
+    <value>Estop premuto (anta dell'armadio)</value>
+  </data>
+  <data name="CABINET OFF" xml:space="preserve">
+    <value>Gabinetto spento</value>
+  </data>
+  <data name="ETHERNET SWITCH NOT OK" xml:space="preserve">
+    <value>Switch Ethernet non ok</value>
+  </data>
+  <data name="UPSTREAM SAFETY NOT OK" xml:space="preserve">
+    <value>Sicurezza a monte non ok</value>
+  </data>
+  <data name="MANUAL START REQUIRED" xml:space="preserve">
+    <value>Avvio manuale richiesto</value>
+  </data>
+  <data name="FAULT" xml:space="preserve">
+    <value>Colpa</value>
+  </data>
+  <data name="PLC ADDRESS" xml:space="preserve">
+    <value>Indirizzo PLC</value>
+  </data>
+  <data name="TIME IN" xml:space="preserve">
+    <value>Tempo dentro</value>
+  </data>
+  <data name="TIME ACKNOWLEDGE" xml:space="preserve">
+    <value>Riconoscimento del tempo</value>
+  </data>
+  <data name="TIME OUT" xml:space="preserve">
+    <value>Tempo scaduto</value>
+  </data>
+  <data name="TO PAGE" xml:space="preserve">
+    <value>Alla pagina</value>
+  </data>
+  <data name="MINOR FAULT PRESENT" xml:space="preserve">
+    <value>Difetto minore presente</value>
+  </data>
+  <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT (POSSIBLE CAVITATION)" xml:space="preserve">
+    <value>Corrente del motore al di sotto del limite di intervallo minimo (possibile cavitazione)</value>
+  </data>
+  <data name="SPEED REQUEST" xml:space="preserve">
+    <value>Richiesta di velocità</value>
+  </data>
+  <data name="MAXIMUM CURRENT" xml:space="preserve">
+    <value>Corrente massima</value>
+  </data>
+  <data name="MINIMUM CURRENT" xml:space="preserve">
+    <value>Corrente minima</value>
+  </data>
+  <data name="NOMINAL MOTOR CURRENT" xml:space="preserve">
+    <value>Corrente nominale del motore</value>
+  </data>
+  <data name="HIGH RESTART SPEED" xml:space="preserve">
+    <value>Alta velocità di riavvio</value>
+  </data>
+  <data name="DURATION" xml:space="preserve">
+    <value>Durata</value>
+  </data>
+  <data name="PRODUCTION SPEED" xml:space="preserve">
+    <value>Velocità di produzione</value>
+  </data>
+  <data name="MAINTENANCE SPEED" xml:space="preserve">
+    <value>Velocità di manutenzione</value>
+  </data>
+  <data name="MINIMUM" xml:space="preserve">
+    <value>Minimo</value>
+  </data>
+  <data name="MAXIMUM" xml:space="preserve">
+    <value>Massimo</value>
+  </data>
+  <data name="NEW VALUE" xml:space="preserve">
+    <value>Nuovo valore</value>
+  </data>
+  <data name="SEND THE FOLLOWING IMAGE TO PLC?" xml:space="preserve">
+    <value>Invia la seguente immagine a Plc?</value>
+  </data>
+  <data name="DELETE THE FOLLOWING IMAGE?" xml:space="preserve">
+    <value>Eliminare l'immagine seguente?</value>
+  </data>
+  <data name="SAVE NEW PROCESS IMAGE" xml:space="preserve">
+    <value>Salva nuova immagine di processo</value>
+  </data>
+  <data name="NAME" xml:space="preserve">
+    <value>Nome</value>
+  </data>
 </root>
