--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -1765,4 +1765,270 @@
   <data name="FIELD_ADJUST" xml:space="preserve">
     <value>Field Adjust</value>
   </data>
+  <data name="SWIPE CARD TO LOG IN" xml:space="preserve">
+    <value>Swipe Card To Log In</value>
+  </data>
+  <data name="SEARCH COMPONENTS" xml:space="preserve">
+    <value>Search Components</value>
+  </data>
+  <data name="OPEN VIRTUAL KEYBOARD" xml:space="preserve">
+    <value>Open Virtual Keyboard</value>
+  </data>
+  <data name="NO POSITION" xml:space="preserve">
+    <value>No Position</value>
+  </data>
+  <data name="LEVELS NOT OK FOR PROCESS" xml:space="preserve">
+    <value>Levels Not Ok For Process</value>
+  </data>
+  <data name="GREASE MINIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Grease Minimum Level Not Ok</value>
+  </data>
+  <data name="LOCAL ENABLE SELECTOR NOT OK" xml:space="preserve">
+    <value>Local Enable Selector Not Ok</value>
+  </data>
+  <data name="INVERTER PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>Inverter Profinet Communication Not Ok</value>
+  </data>
+  <data name="COMPONENT DISABLED" xml:space="preserve">
+    <value>Component Disabled</value>
+  </data>
+  <data name="USER" xml:space="preserve">
+    <value>User</value>
+  </data>
+  <data name="DEBALER NOT IN AUTO MODE" xml:space="preserve">
+    <value>Debaler Not In Auto Mode</value>
+  </data>
+  <data name="OVERLOAD" xml:space="preserve">
+    <value>Overload</value>
+  </data>
+  <data name="CHARGING" xml:space="preserve">
+    <value>Charging</value>
+  </data>
+  <data name="SPEED_ACTUAL" xml:space="preserve">
+    <value>Speed_Actual</value>
+  </data>
+  <data name="FINAL SILO" xml:space="preserve">
+    <value>Final Silo</value>
+  </data>
+  <data name="WASHING 2" xml:space="preserve">
+    <value>Washing 2</value>
+  </data>
+  <data name="CONCENTRATION" xml:space="preserve">
+    <value>Concentration</value>
+  </data>
+  <data name="HYSTERESIS" xml:space="preserve">
+    <value>Hysteresis</value>
+  </data>
+  <data name="SETPOINT" xml:space="preserve">
+    <value>Setpoint</value>
+  </data>
+  <data name="START TANK REFILL (UP TO SETPOINT)" xml:space="preserve">
+    <value>Start Tank Refill (Up To Setpoint)</value>
+  </data>
+  <data name="MINIMUM LEVEL FOR DISCHARGING" xml:space="preserve">
+    <value>Minimum Level For Discharging</value>
+  </data>
+  <data name="MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>Maximum Temperature</value>
+  </data>
+  <data name="LOW TEMPERATURE WARNING" xml:space="preserve">
+    <value>Low Temperature Warning</value>
+  </data>
+  <data name="MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>Minimum Temperature</value>
+  </data>
+  <data name="PARAMETER MANAGEMENT" xml:space="preserve">
+    <value>Parameter Management</value>
+  </data>
+  <data name="SKIP PREPARATION" xml:space="preserve">
+    <value>Skip Preparation</value>
+  </data>
+  <data name="SELECTED TRENDS" xml:space="preserve">
+    <value>Selected Trends</value>
+  </data>
+  <data name="DELETE SELECTED PRESET?" xml:space="preserve">
+    <value>Delete Selected Preset?</value>
+  </data>
+  <data name="THIS PRESET WILL BE DELETED FROM ALL MACHINES." xml:space="preserve">
+    <value>This Preset Will Be Deleted From All Machines.</value>
+  </data>
+  <data name="ADVANCED VIEW" xml:space="preserve">
+    <value>Advanced View</value>
+  </data>
+  <data name="ADD NEW" xml:space="preserve">
+    <value>Add New</value>
+  </data>
+  <data name="PRESETS" xml:space="preserve">
+    <value>Presets</value>
+  </data>
+  <data name="IMAGE NAME" xml:space="preserve">
+    <value>Image Name</value>
+  </data>
+  <data name="CREATION DATE" xml:space="preserve">
+    <value>Creation Date</value>
+  </data>
+  <data name="TYPE" xml:space="preserve">
+    <value>Type</value>
+  </data>
+  <data name="DESCRIPTION" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="CURRENT VALUE" xml:space="preserve">
+    <value>Current Value</value>
+  </data>
+  <data name="LOGGED VALUE" xml:space="preserve">
+    <value>Logged Value</value>
+  </data>
+  <data name="ONLY SHOW DIFFERENCES" xml:space="preserve">
+    <value>Only Show Differences</value>
+  </data>
+  <data name="SEND IMAGE TO PLC" xml:space="preserve">
+    <value>Send Image To Plc</value>
+  </data>
+  <data name="OPEN IMAGE" xml:space="preserve">
+    <value>Open Image</value>
+  </data>
+  <data name="DELETE IMAGE" xml:space="preserve">
+    <value>Delete Image</value>
+  </data>
+  <data name="CREATE NEW IMAGE" xml:space="preserve">
+    <value>Create New Image</value>
+  </data>
+  <data name="NO DIFFERENCES FOUND" xml:space="preserve">
+    <value>No Differences Found</value>
+  </data>
+  <data name="CRATED BY" xml:space="preserve">
+    <value>Crated By</value>
+  </data>
+  <data name="SELECT PROCESS IMAGE" xml:space="preserve">
+    <value>Select Process Image</value>
+  </data>
+  <data name="PROCESS IMAGE" xml:space="preserve">
+    <value>Process Image</value>
+  </data>
+  <data name="PARAMETER LIST" xml:space="preserve">
+    <value>Parameter List</value>
+  </data>
+  <data name="WASHING SILO" xml:space="preserve">
+    <value>Washing Silo</value>
+  </data>
+  <data name="INVERTER NOT READY" xml:space="preserve">
+    <value>Inverter Not Ready</value>
+  </data>
+  <data name="INVERTER WARNING PRESENT" xml:space="preserve">
+    <value>Inverter Warning Present</value>
+  </data>
+  <data name="WASHING 1" xml:space="preserve">
+    <value>Washing 1</value>
+  </data>
+  <data name="LOCAL SAFETY" xml:space="preserve">
+    <value>Local Safety</value>
+  </data>
+  <data name="(1=CLOSED)" xml:space="preserve">
+    <value>(1=Closed)</value>
+  </data>
+  <data name="CHANGE VALUE" xml:space="preserve">
+    <value>Change Value</value>
+  </data>
+  <data name="PLC PAGE" xml:space="preserve">
+    <value>Plc Page</value>
+  </data>
+  <data name="EMERGENCY" xml:space="preserve">
+    <value>Emergency</value>
+  </data>
+  <data name="ESTOP PRESSED (ON PLANT)" xml:space="preserve">
+    <value>Estop Pressed (On Plant)</value>
+  </data>
+  <data name="ESTOP PRESSED (CABINET DOOR)" xml:space="preserve">
+    <value>Estop Pressed (Cabinet Door)</value>
+  </data>
+  <data name="CABINET OFF" xml:space="preserve">
+    <value>Cabinet Off</value>
+  </data>
+  <data name="ETHERNET SWITCH NOT OK" xml:space="preserve">
+    <value>Ethernet Switch Not Ok</value>
+  </data>
+  <data name="UPSTREAM SAFETY NOT OK" xml:space="preserve">
+    <value>Upstream Safety Not Ok</value>
+  </data>
+  <data name="MANUAL START REQUIRED" xml:space="preserve">
+    <value>Manual Start Required</value>
+  </data>
+  <data name="FAULT" xml:space="preserve">
+    <value>Fault</value>
+  </data>
+  <data name="PLC ADDRESS" xml:space="preserve">
+    <value>Plc Address</value>
+  </data>
+  <data name="TIME IN" xml:space="preserve">
+    <value>Time In</value>
+  </data>
+  <data name="TIME ACKNOWLEDGE" xml:space="preserve">
+    <value>Time Acknowledge</value>
+  </data>
+  <data name="TIME OUT" xml:space="preserve">
+    <value>Time Out</value>
+  </data>
+  <data name="TO PAGE" xml:space="preserve">
+    <value>To Page</value>
+  </data>
+  <data name="INFO_INV_6" xml:space="preserve">
+    <value></value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="MINOR FAULT PRESENT" xml:space="preserve">
+    <value>Minor Fault Present</value>
+  </data>
+  <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT (POSSIBLE CAVITATION)" xml:space="preserve">
+    <value>Motor Current Below Minimum Range Limit (Possible Cavitation)</value>
+  </data>
+  <data name="SPEED REQUEST" xml:space="preserve">
+    <value>Speed Request</value>
+  </data>
+  <data name="MAXIMUM CURRENT" xml:space="preserve">
+    <value>Maximum Current</value>
+  </data>
+  <data name="MINIMUM CURRENT" xml:space="preserve">
+    <value>Minimum Current</value>
+  </data>
+  <data name="NOMINAL MOTOR CURRENT" xml:space="preserve">
+    <value>Nominal Motor Current</value>
+  </data>
+  <data name="HIGH RESTART SPEED" xml:space="preserve">
+    <value>High Restart Speed</value>
+  </data>
+  <data name="DURATION" xml:space="preserve">
+    <value>Duration</value>
+  </data>
+  <data name="PRODUCTION SPEED" xml:space="preserve">
+    <value>Production Speed</value>
+  </data>
+  <data name="MAINTENANCE SPEED" xml:space="preserve">
+    <value>Maintenance Speed</value>
+  </data>
+  <data name="MINIMUM" xml:space="preserve">
+    <value>Minimum</value>
+  </data>
+  <data name="MAXIMUM" xml:space="preserve">
+    <value>Maximum</value>
+  </data>
+  <data name="NEW VALUE" xml:space="preserve">
+    <value>New Value</value>
+  </data>
+  <data name="SEND THE FOLLOWING IMAGE TO PLC?" xml:space="preserve">
+    <value>Send The Following Image To Plc?</value>
+  </data>
+  <data name="DELETE THE FOLLOWING IMAGE?" xml:space="preserve">
+    <value>Delete The Following Image?</value>
+  </data>
+  <data name="SAVE NEW PROCESS IMAGE" xml:space="preserve">
+    <value>Save New Process Image</value>
+  </data>
+  <data name="NAME" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="INFO_OIL_SEAL_3" xml:space="preserve">
+    <value></value>
+    <comment>InfoText Fault</comment>
+  </data>
 </root>
