--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -981,9 +981,6 @@
   <data name="INFO_OIL_SEAL_2" xml:space="preserve">
     <value>检查轴油封系统并重新启动电机</value>
   </data>
-  <data name="INFO_OIL_SEAL_3" xml:space="preserve">
-    <value>重新填充密封油或电机将在一小时内停止</value>
-  </data>
   <data name="INFO_OIL_SEAL_4" xml:space="preserve">
     <value>检查轴油封系统并重新启动电机</value>
   </data>
@@ -1415,5 +1412,263 @@
   </data>
   <data name="CRITICAL FAULT IN THE ELECTRICAL CABINET" xml:space="preserve">
     <value>电气柜中的严重故障</value>
+  </data>
+  <data name="SWIPE CARD TO LOG IN" xml:space="preserve">
+    <value>刷卡登录</value>
+  </data>
+  <data name="SEARCH COMPONENTS" xml:space="preserve">
+    <value>搜索组件</value>
+  </data>
+  <data name="OPEN VIRTUAL KEYBOARD" xml:space="preserve">
+    <value>打开虚拟键盘</value>
+  </data>
+  <data name="NO POSITION" xml:space="preserve">
+    <value>无职位</value>
+  </data>
+  <data name="LEVELS NOT OK FOR PROCESS" xml:space="preserve">
+    <value>水平不适合过程</value>
+  </data>
+  <data name="GREASE MINIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>润滑脂最低油位不正常</value>
+  </data>
+  <data name="LOCAL ENABLE SELECTOR NOT OK" xml:space="preserve">
+    <value>本地启用选择器不正常</value>
+  </data>
+  <data name="INVERTER PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>逆变器 Profinet 通信不正常</value>
+  </data>
+  <data name="COMPONENT DISABLED" xml:space="preserve">
+    <value>组件已禁用</value>
+  </data>
+  <data name="USER" xml:space="preserve">
+    <value>用户</value>
+  </data>
+  <data name="DEBALER NOT IN AUTO MODE" xml:space="preserve">
+    <value>拆包机未处于自动模式</value>
+  </data>
+  <data name="OVERLOAD" xml:space="preserve">
+    <value>超载</value>
+  </data>
+  <data name="CHARGING" xml:space="preserve">
+    <value>收费</value>
+  </data>
+  <data name="SPEED_ACTUAL" xml:space="preserve">
+    <value>速度_实际</value>
+  </data>
+  <data name="FINAL SILO" xml:space="preserve">
+    <value>最终筒仓</value>
+  </data>
+  <data name="WASHING 2" xml:space="preserve">
+    <value>洗涤 2</value>
+  </data>
+  <data name="CONCENTRATION" xml:space="preserve">
+    <value>专注</value>
+  </data>
+  <data name="HYSTERESIS" xml:space="preserve">
+    <value>滞后</value>
+  </data>
+  <data name="SETPOINT" xml:space="preserve">
+    <value>设定点</value>
+  </data>
+  <data name="START TANK REFILL (UP TO SETPOINT)" xml:space="preserve">
+    <value>开始水箱加注（达到设定点）</value>
+  </data>
+  <data name="MINIMUM LEVEL FOR DISCHARGING" xml:space="preserve">
+    <value>最低排放量</value>
+  </data>
+  <data name="MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>最高温度</value>
+  </data>
+  <data name="LOW TEMPERATURE WARNING" xml:space="preserve">
+    <value>低温警告</value>
+  </data>
+  <data name="MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>最低温度</value>
+  </data>
+  <data name="PARAMETER MANAGEMENT" xml:space="preserve">
+    <value>参数管理</value>
+  </data>
+  <data name="SKIP PREPARATION" xml:space="preserve">
+    <value>跳过准备</value>
+  </data>
+  <data name="SELECTED TRENDS" xml:space="preserve">
+    <value>精选趋势</value>
+  </data>
+  <data name="DELETE SELECTED PRESET?" xml:space="preserve">
+    <value>删除选定的预设？</value>
+  </data>
+  <data name="THIS PRESET WILL BE DELETED FROM ALL MACHINES." xml:space="preserve">
+    <value>此预设将从所有机器中删除。</value>
+  </data>
+  <data name="ADVANCED VIEW" xml:space="preserve">
+    <value>高级视图</value>
+  </data>
+  <data name="ADD NEW" xml:space="preserve">
+    <value>添新</value>
+  </data>
+  <data name="PRESETS" xml:space="preserve">
+    <value>预设</value>
+  </data>
+  <data name="IMAGE NAME" xml:space="preserve">
+    <value>图片名称</value>
+  </data>
+  <data name="CREATION DATE" xml:space="preserve">
+    <value>创建日期</value>
+  </data>
+  <data name="TYPE" xml:space="preserve">
+    <value>类型</value>
+  </data>
+  <data name="DESCRIPTION" xml:space="preserve">
+    <value>描述</value>
+  </data>
+  <data name="CURRENT VALUE" xml:space="preserve">
+    <value>当前值</value>
+  </data>
+  <data name="LOGGED VALUE" xml:space="preserve">
+    <value>记录值</value>
+  </data>
+  <data name="ONLY SHOW DIFFERENCES" xml:space="preserve">
+    <value>只显示差异</value>
+  </data>
+  <data name="SEND IMAGE TO PLC" xml:space="preserve">
+    <value>将图像发送到 PLC</value>
+  </data>
+  <data name="OPEN IMAGE" xml:space="preserve">
+    <value>打开图片</value>
+  </data>
+  <data name="DELETE IMAGE" xml:space="preserve">
+    <value>删除图像</value>
+  </data>
+  <data name="CREATE NEW IMAGE" xml:space="preserve">
+    <value>创建新图像</value>
+  </data>
+  <data name="NO DIFFERENCES FOUND" xml:space="preserve">
+    <value>未发现差异</value>
+  </data>
+  <data name="CRATED BY" xml:space="preserve">
+    <value>由</value>
+  </data>
+  <data name="SELECT PROCESS IMAGE" xml:space="preserve">
+    <value>选择过程映像</value>
+  </data>
+  <data name="PROCESS IMAGE" xml:space="preserve">
+    <value>过程映像</value>
+  </data>
+  <data name="PARAMETER LIST" xml:space="preserve">
+    <value>参数列表</value>
+  </data>
+  <data name="WASHING SILO" xml:space="preserve">
+    <value>洗涤筒仓</value>
+  </data>
+  <data name="INVERTER NOT READY" xml:space="preserve">
+    <value>逆变器未就绪</value>
+  </data>
+  <data name="INVERTER WARNING PRESENT" xml:space="preserve">
+    <value>出现逆变器警告</value>
+  </data>
+  <data name="WASHING 1" xml:space="preserve">
+    <value>洗涤 1</value>
+  </data>
+  <data name="LOCAL SAFETY" xml:space="preserve">
+    <value>当地安全</value>
+  </data>
+  <data name="(1=CLOSED)" xml:space="preserve">
+    <value>（1=关闭）</value>
+  </data>
+  <data name="CHANGE VALUE" xml:space="preserve">
+    <value>改变价值</value>
+  </data>
+  <data name="PLC PAGE" xml:space="preserve">
+    <value>公司页面</value>
+  </data>
+  <data name="EMERGENCY" xml:space="preserve">
+    <value>紧急情况</value>
+  </data>
+  <data name="ESTOP PRESSED (ON PLANT)" xml:space="preserve">
+    <value>Estop Pressed（在工厂）</value>
+  </data>
+  <data name="ESTOP PRESSED (CABINET DOOR)" xml:space="preserve">
+    <value>Estop Pressed（柜门）</value>
+  </data>
+  <data name="CABINET OFF" xml:space="preserve">
+    <value>机柜关闭</value>
+  </data>
+  <data name="ETHERNET SWITCH NOT OK" xml:space="preserve">
+    <value>以太网交换机不正常</value>
+  </data>
+  <data name="UPSTREAM SAFETY NOT OK" xml:space="preserve">
+    <value>上游安全不好</value>
+  </data>
+  <data name="MANUAL START REQUIRED" xml:space="preserve">
+    <value>需要手动启动</value>
+  </data>
+  <data name="FAULT" xml:space="preserve">
+    <value>过错</value>
+  </data>
+  <data name="PLC ADDRESS" xml:space="preserve">
+    <value>公司地址</value>
+  </data>
+  <data name="TIME IN" xml:space="preserve">
+    <value>时间</value>
+  </data>
+  <data name="TIME ACKNOWLEDGE" xml:space="preserve">
+    <value>时间确认</value>
+  </data>
+  <data name="TIME OUT" xml:space="preserve">
+    <value>暂停</value>
+  </data>
+  <data name="TO PAGE" xml:space="preserve">
+    <value>到页面</value>
+  </data>
+  <data name="MINOR FAULT PRESENT" xml:space="preserve">
+    <value>存在小故障</value>
+  </data>
+  <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT (POSSIBLE CAVITATION)" xml:space="preserve">
+    <value>电机电流低于最小范围限制（可能存在气蚀）</value>
+  </data>
+  <data name="SPEED REQUEST" xml:space="preserve">
+    <value>速度要求</value>
+  </data>
+  <data name="MAXIMUM CURRENT" xml:space="preserve">
+    <value>最大电流</value>
+  </data>
+  <data name="MINIMUM CURRENT" xml:space="preserve">
+    <value>最小电流</value>
+  </data>
+  <data name="NOMINAL MOTOR CURRENT" xml:space="preserve">
+    <value>电机额定电流</value>
+  </data>
+  <data name="HIGH RESTART SPEED" xml:space="preserve">
+    <value>高重启速度</value>
+  </data>
+  <data name="DURATION" xml:space="preserve">
+    <value>期间</value>
+  </data>
+  <data name="PRODUCTION SPEED" xml:space="preserve">
+    <value>生产速度</value>
+  </data>
+  <data name="MAINTENANCE SPEED" xml:space="preserve">
+    <value>维护速度</value>
+  </data>
+  <data name="MINIMUM" xml:space="preserve">
+    <value>最低限度</value>
+  </data>
+  <data name="MAXIMUM" xml:space="preserve">
+    <value>最大</value>
+  </data>
+  <data name="NEW VALUE" xml:space="preserve">
+    <value>新价值</value>
+  </data>
+  <data name="SEND THE FOLLOWING IMAGE TO PLC?" xml:space="preserve">
+    <value>将以下图像发送到 PLC？</value>
+  </data>
+  <data name="DELETE THE FOLLOWING IMAGE?" xml:space="preserve">
+    <value>删除以下图像？</value>
+  </data>
+  <data name="SAVE NEW PROCESS IMAGE" xml:space="preserve">
+    <value>保存新的过程映像</value>
+  </data>
+  <data name="NAME" xml:space="preserve">
+    <value>姓名</value>
   </data>
 </root>
